# poafloc

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE.md  Makefile  README.md  args.hpp  argsConfig.cmake.in  demo.cpp  poaflocConfig.cmake.in  vcpkg-configuration.json  vcpkg.json
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
demo/: CMakeLists.txt  main.c  main.cpp
example/: CMakeLists.txt  example.cpp  example_c.c  example_cpp.cpp
include/: args.h  args.hpp  poafloc.h  poafloc.hpp
include/poafloc/: error.hpp  poafloc.h  poafloc.hpp
source/: c_bindings.cpp  help.cpp  option.cpp  poafloc.cpp  trie.cpp
src/: CMakeLists.txt  args.cpp  c_bindings.cpp  help.cpp  poafloc.cpp  trie.cpp
test/: CMakeLists.txt
test/source/: parser.cpp  poafloc_test.cpp
